--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             </div>
             <p class="header-description">Dive into the fascinating world of data-driven technology and AI advancements.</p>
         </header>
-    </div>
-
-    <!-- Navigation Buttons Container -->
-    <div class="nav-buttons-container">
-        <button onclick="window.location.href='home.html'" class="back-home-btn">Back to Home</button>
-        <button onclick="window.location.href='about.html'">About</button>
-        <button onclick="window.location.href='contact.html'">Contact</button>
+        
+        <!-- Navigation Buttons Container -->
+        <div class="nav-buttons-container">
+            <button onclick="window.location.href='home.html'" class="back-home-btn">Home</button>
+            <button onclick="window.location.href='about.html'">About</button>
+            <button onclick="window.location.href='contact.html'">Contact</button>
+        </div>
     </div>
 
     <!-- Blog Preview Section -->
@@ -42,7 +42,7 @@
                 <p class="preview">
                     Machine learning (ML) is a branch of artificial intelligence (AI) that allows systems to learn from data and improve over time...
                 </p>
-                <a href="https://example.com/full-article" target="_blank" class="read-more">Continue reading &rarr;</a>
+                <a href="https://www.geeksforgeeks.org/introduction-machine-learning/" target="_blank" class="read-more">Continue reading &rarr;</a>
             </div>
         </div>
 
@@ -57,7 +57,7 @@
                 <p class="preview">
                     Neural networks simulate the way human brains process information, allowing machines to perform tasks like image recognition...
                 </p>
-                <a href="https://example.com/neural-networks" target="_blank" class="read-more">Continue reading &rarr;</a>
+                <a href="https://towardsdatascience.com/understanding-neural-networks-19020b758230" target="_blank" class="read-more">Continue reading &rarr;</a>
             </div>
         </div>
 
@@ -72,7 +72,7 @@
                 <p class="preview">
                     Reinforcement learning (RL) is where an agent learns by interacting with its environment, improving its decision-making abilities...
                 </p>
-                <a href="https://example.com/reinforcement-learning" target="_blank" class="read-more">Continue reading &rarr;</a>
+                <a href="https://www.amii.ca/latest-from-amii/future-ai-reinforcement-learning-and-heres-why/" target="_blank" class="read-more">Continue reading &rarr;</a>
             </div>
         </div>
 
@@ -87,7 +87,7 @@
                 <p class="preview">
                     The field of machine learning is rapidly evolving, with trends like quantum computing, AI ethics, and automated workflows...
                 </p>
-                <a href="https://example.com/future-trends" target="_blank" class="read-more">Continue reading &rarr;</a>
+                <a href="https://365datascience.com/trending/future-of-machine-learning/" target="_blank" class="read-more">Continue reading &rarr;</a>
             </div>
         </div>
 
@@ -103,7 +103,7 @@
                 <p class="preview">
                     Data preprocessing is crucial for ensuring quality inputs into ML models. Learn about data cleaning, normalization, and more...
                 </p>
-                <a href="https://example.com/data-preprocessing" target="_blank" class="read-more">Continue reading &rarr;</a>
+                <a href="https://lakefs.io/blog/data-preprocessing-in-machine-learning/" target="_blank" class="read-more">Continue reading &rarr;</a>
             </div>
         </div>
 
@@ -118,7 +118,7 @@
                 <p class="preview">
                     Supervised learning is one of the main types of ML, using labeled data to teach models. Discover how it works and its use cases...
                 </p>
-                <a href="https://example.com/supervised-learning" target="_blank" class="read-more">Continue reading &rarr;</a>
+                <a href="https://www.ibm.com/topics/supervised-learning" target="_blank" class="read-more">Continue reading &rarr;</a>
             </div>
         </div>
     </main>
